--- a/package.json
+++ b/package.json
@@ -6,17 +6,17 @@
   "author": "maksimyurkov <yurkov.maksim.sergeevich@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "@polymer/lit-element": "@next",
-    "@polymer/iron-iconset-svg": "@next",
-    "@polymer/iron-icon": "@next",
-    "@polymer/paper-checkbox": "@next",
-    "@polymer/iron-collapse": "@next",
-    "@polymer/paper-icon-button": "@next",
-    "@polymer/paper-button": "@next",
-    "@polymer/paper-spinner": "@next",
+    "@polymer/lit-element": "^0.5.1",
+    "@polymer/iron-iconset-svg": "^3.0.0-pre.18",
+    "@polymer/iron-icon": "^3.0.0-pre.18",
+    "@polymer/paper-checkbox": "^3.0.0-pre.18",
+    "@polymer/iron-collapse": "^3.0.0-pre.18",
+    "@polymer/paper-icon-button": "^3.0.0-pre.18",
+    "@polymer/paper-button": "^3.0.0-pre.18",
+    "@polymer/paper-spinner": "^3.0.0-pre.18",
     "ht-image": "https://github.com/maksimyurkov/ht-image",
     "ht-user-avatar": "https://github.com/maksimyurkov/ht-user-avatar",
     "ht-chip": "https://github.com/maksimyurkov/ht-chip",
-    "pwa-helpers": "https://github.com/maksimyurkov/pwa-helpers"
+    "pwa-helpers": "https://github.com/Polymer/pwa-helpers"
   }
 }
