change sorter, add browsers, tools in filter, add clear in search input

--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@polymer/paper-icon-button": "^3.0.0-pre.18",
     "@polymer/paper-button": "^3.0.0-pre.18",
     "@polymer/paper-spinner": "^3.0.0-pre.18",
+    "@polymer/paper-dropdown-menu": "^3.0.0-pre.18",
+    "@polymer/paper-listbox": "^3.0.0-pre.18",
+    "@polymer/paper-item": "^3.0.0-pre.18",
     "ht-image": "https://github.com/maksimyurkov/ht-image",
     "ht-user-avatar": "https://github.com/maksimyurkov/ht-user-avatar",
     "ht-chip": "https://github.com/maksimyurkov/ht-chip",
