--- a/package.json
+++ b/package.json
@@ -1,34 +1,11 @@
+
 {
-  "_from": "git+https://github.com/maksimyurkov/ht-elements-catalog.git",
-  "_id": "ht-elements-catalog@1.0.0",
-  "_inBundle": false,
-  "_integrity": "",
-  "_location": "/ht-elements-catalog",
-  "_phantomChildren": {},
-  "_requested": {
-    "type": "git",
-    "raw": "ht-elements-catalog@git+https://github.com/maksimyurkov/ht-elements-catalog.git",
-    "name": "ht-elements-catalog",
-    "escapedName": "ht-elements-catalog",
-    "rawSpec": "git+https://github.com/maksimyurkov/ht-elements-catalog.git",
-    "saveSpec": "git+https://github.com/maksimyurkov/ht-elements-catalog.git",
-    "fetchSpec": "https://github.com/maksimyurkov/ht-elements-catalog.git",
-    "gitCommittish": null
-  },
-  "_requiredBy": [
-    "/"
-  ],
-  "_resolved": "git+https://github.com/maksimyurkov/ht-elements-catalog.git#a06e5b05c849c81d70a87905fbb9c3ff72c1b4a7",
-  "_spec": "ht-elements-catalog@git+https://github.com/maksimyurkov/ht-elements-catalog.git",
-  "_where": "C:\\Users\\max\\Desktop\\elements-01-ht",
-  "author": {
-    "name": "maksimyurkov",
-    "email": "yurkov.maksim.sergeevich@gmail.com"
-  },
-  "bugs": {
-    "url": "https://github.com/maksimyurkov/ht-elements-catalog/issues"
-  },
-  "bundleDependencies": false,
+  "name": "@01ht/ht-elements-catalog",
+  "version": "1.0.0",
+  "main": "ht-elements-catalog.js",
+  "repository": "01ht/ht-elements-catalog",
+  "author": "01ht Ltd",
+  "license": "UNLICENSED",
   "dependencies": {
     "@polymer/iron-collapse": "^3.0.0-pre.18",
     "@polymer/iron-icon": "^3.0.0-pre.18",
@@ -41,20 +18,9 @@
     "@polymer/paper-item": "^3.0.0-pre.18",
     "@polymer/paper-listbox": "^3.0.0-pre.18",
     "@polymer/paper-spinner": "^3.0.0-pre.18",
-    "ht-chip": "git+https://github.com/maksimyurkov/ht-chip.git",
-    "ht-image": "git+https://github.com/maksimyurkov/ht-image.git",
-    "ht-user-avatar": "git+https://github.com/maksimyurkov/ht-user-avatar.git",
-    "pwa-helpers": "git+https://github.com/Polymer/pwa-helpers.git"
-  },
-  "deprecated": false,
-  "description": "",
-  "homepage": "https://github.com/maksimyurkov/ht-elements-catalog#readme",
-  "license": "MIT",
-  "main": "ht-elements-catalog.js",
-  "name": "ht-elements-catalog",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/maksimyurkov/ht-elements-catalog.git"
-  },
-  "version": "1.0.0"
+    "@01ht/ht-chip": "^1.0.0",
+    "@01ht/ht-image": "^1.0.0",
+    "@01ht/ht-user-avatar": "^1.0.0",
+    "pwa-helpers": "^0.8.3"
+  }
 }
