--- a/package.json
+++ b/package.json
@@ -1,26 +1,28 @@
-
 {
   "name": "@01ht/ht-elements-catalog",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "main": "ht-elements-catalog.js",
   "repository": "01ht/ht-elements-catalog",
-  "author": "01ht Ltd",
+  "author": "01HT Ltd",
   "license": "UNLICENSED",
   "dependencies": {
-    "@polymer/iron-collapse": "^3.0.0-pre.18",
-    "@polymer/iron-icon": "^3.0.0-pre.18",
-    "@polymer/iron-iconset-svg": "^3.0.0-pre.18",
-    "@polymer/lit-element": "^0.5.1",
-    "@polymer/paper-button": "^3.0.0-pre.18",
-    "@polymer/paper-checkbox": "^3.0.0-pre.18",
-    "@polymer/paper-dropdown-menu": "^3.0.0-pre.18",
-    "@polymer/paper-icon-button": "^3.0.0-pre.18",
-    "@polymer/paper-item": "^3.0.0-pre.18",
-    "@polymer/paper-listbox": "^3.0.0-pre.18",
-    "@polymer/paper-spinner": "^3.0.0-pre.18",
+    "@polymer/lit-element": "^0.6.1",
+    "@polymer/iron-collapse": "^3.0.1",
+    "@polymer/iron-icon": "^3.0.1",
+    "@polymer/iron-iconset-svg": "^3.0.1",
+    "@polymer/paper-checkbox": "^3.0.1",
+    "@polymer/paper-dropdown-menu": "^3.0.1",
+    "@polymer/paper-icon-button": "^3.0.1",
+    "@polymer/paper-item": "^3.0.1",
+    "@polymer/paper-listbox": "^3.0.1",
     "@01ht/ht-chip": "^1.0.0",
+    "@01ht/ht-spinner": "^1.0.0",
     "@01ht/ht-image": "^1.0.0",
+    "@01ht/ht-image-slider": "^1.0.0",
+    "@01ht/ht-animated-image": "^1.0.0",
     "@01ht/ht-user-avatar": "^1.0.0",
+    "@01ht/ht-nothing-found-placeholder": "^1.0.0",
+    "@01ht/ht-client-helper-functions": "^1.0.0",
     "pwa-helpers": "^0.8.3"
   }
 }
