--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
     "@polymer/paper-icon-button": "^3.0.1",
     "@polymer/paper-item": "^3.0.1",
     "@polymer/paper-listbox": "^3.0.1",
-    "@01ht/ht-chip": "^1.0.0",
-    "@01ht/ht-spinner": "^1.0.0",
-    "@01ht/ht-image": "^1.0.0",
-    "@01ht/ht-image-slider": "^1.0.0",
-    "@01ht/ht-animated-image": "^1.0.0",
-    "@01ht/ht-user-avatar": "^1.0.0",
-    "@01ht/ht-nothing-found-placeholder": "^1.0.0",
-    "@01ht/ht-client-helper-functions": "^1.0.0",
+    "@01ht/ht-chip": "01ht/ht-chip",
+    "@01ht/ht-spinner": "01ht/ht-spinner",
+    "@01ht/ht-image": "01ht/ht-image",
+    "@01ht/ht-image-slider": "01ht/ht-image-slider",
+    "@01ht/ht-animated-image": "01ht/ht-animated-image",
+    "@01ht/ht-user-avatar": "01ht/ht-user-avatar",
+    "@01ht/ht-nothing-found-placeholder": "01ht/ht-nothing-found-placeholder",
+    "@01ht/ht-client-helper-functions": "01ht/ht-client-helper-functions",
     "pwa-helpers": "^0.8.3"
   }
 }
