--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@01ht/ht-image": "01ht/ht-image",
     "@01ht/ht-image-slider": "01ht/ht-image-slider",
     "@01ht/ht-animated-image": "01ht/ht-animated-image",
+    "@01ht/ht-elements-item-youtube-preview": "01ht/ht-elements-item-youtube-preview",
     "@01ht/ht-user-avatar": "01ht/ht-user-avatar",
     "@01ht/ht-nothing-found-placeholder": "01ht/ht-nothing-found-placeholder",
     "@01ht/ht-client-helper-functions": "01ht/ht-client-helper-functions",
